<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/create_acct_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/username_account"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <AutoCompleteTextView
        android:id="@+id/email_account"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password_account"
        android:hint="@string/password_hint_create_acc"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/create_acct_button"
        android:text="@string/create_text"
        android:textColor="@color/material_dynamic_neutral10"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>